# geollm

./: ARCHITECTURE.md  pyproject.toml
demo/: main.py
demo/static/: index.html
geollm/: examples.py  parser.py  prompts.py
geollm/datasources/: swissnames3d.py
tests/: test_contextual_distances.py  test_parser_streaming.py  test_swissnames3d.py
